# aiedge-scanner

./: .gitignore  CLONE_NEW_PIPELINE.md  DAYTYPE_SPEC.md  MIGRATION.md  QUALITY_CONTROL.md  ROADMAP.md  SUPREME_COURT.md  _launch_scanner.sh  backfill_historical_databento.py  backfill_pattern_lab.py  claude_backtest.py  compare_exits.py  db_benchmark.py  db_test1.py  db_test2b.py  db_test_allsym.py  db_test_funnel.py  exit_simulator.py  live_scanner.py  oauth_setup.py  pattern_lab_api.py  pipeline.py  pyproject.toml  recommend_exits.py  requirements.txt  screenshot_generator.py  session_handoff.md
aiedge/: __init__.py
configs/: best_stocks.yaml  gap_down.yaml  gap_up.yaml  industry_groups.yaml  new_highs.yaml  new_lows.yaml  premarket.yaml
content/: __init__.py
launchd/: com.videopipeline.best_stocks.plist  com.videopipeline.gap_down.plist  com.videopipeline.gap_up.plist  com.videopipeline.industry_groups.plist  com.videopipeline.live_scanner.plist  com.videopipeline.new_highs.plist  com.videopipeline.new_lows.plist  com.videopipeline.premarket.plist
launchd_backup_20260413/: com.videopipeline.best_stocks.plist  com.videopipeline.gap_down.plist  com.videopipeline.gap_up.plist  com.videopipeline.industry_groups.plist  com.videopipeline.new_highs.plist  com.videopipeline.new_lows.plist  com.videopipeline.premarket.plist
scratch/: README.md  db_test2.py  db_test2c.py  db_test3.py  db_test4.py  probe_databento_plan.py  test_dashboard.py  test_spt_fix.py
scripts/: export_calibration.py
shared/: bpa_detector.py  brooks_score.py  brooks_score_audit.md  chart_renderer.py  claude_writer.py  config_loader.py  databento_client.py  notifier.py  pattern_lab.py  sqlite_logger.py  youtube_uploader.py
stages/: broll_generation.py  chart_generation.py  narration.py  newsletter.py  screener.py  upload.py
tests/: adr_smoke_test.py  test_bpa_detector.py  test_exit_simulator.py  test_gap_skip_tagging.py  test_script_validator.py  test_spt_qc.py  test_upload_skip.py
tools/: dashboard_server.py  menu_bar_ranker.py  overnight_exit_study.sh  prove_no_lookahead.py  spt_dashboard_demo.py  spt_screenshots.py  (+3 more)
(+90 files in other folders)
